--- a/SoDutch/Base.lproj/Main.storyboard
+++ b/SoDutch/Base.lproj/Main.storyboard
@@ -632,7 +632,7 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tbe-M7-ALO">
                                 <rect key="frame" x="20" y="20" width="560" height="404"/>
                             </imageView>
-                            <view alpha="0.90000000000000002" contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="aK7-Uy-Zoz">
+                            <view contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="aK7-Uy-Zoz">
                                 <rect key="frame" x="0.0" y="442" width="600" height="110"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eGz-SI-azN">
